--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8"/>
+    <script src="https://kit.fontawesome.com/7a1fd9a567.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css"/>
     <title>CARAVAN</title>
   </head>
@@ -11,6 +12,14 @@
       <h1 class="heading">
         <a href="index.html">CARAVAN</a>
       </h1>
+
+      <div class="social">
+
+        <i class="fab fa-facebook-square"></i>
+        <i class="fab fa-twitter-square"></i>
+        <i class="fab fa-instagram"></i>
+
+      </div>
     </header>
 
     <nav>
@@ -138,9 +147,9 @@
 
       <div class="sidebar">
         <section class="popular">
-          <h2 class="sideber-heading common heading">Popular</h2>
-          <div class="sideber-contents">
-            <p class="popular-text">TO solve old problems<br>study new species</p>
+          <h2 class="sideber-heading common-heading">Popular</h2>
+          <div class="sidebar-contents">
+            <p class="popular-text">To solve old problems<br>study new species</p>
             <p class="popular-text">Why Earth may someday<br>look like Mars</p>
             <p class="popular-text">What will humans look<br>like in 100 years?</p>
             <p class="popular-text">How to grow a forest<br>in yours backyard</p>
@@ -150,23 +159,23 @@
         </section>
 
         <section class="instagram">
-          <div class="sideber-contents">
-
-           <h2 class="instagram-heading common heading">Instagram</h2>
-            <div class="instagram-box"></div>
-            <div class="instagram-box"></div>
-            <div class="instagram-box"></div>
-            <div class="instagram-box"></div>
-            <div class="instagram-box"></div>
-            <div class="instagram-box"></div>
+          
+           <h2 class="instagram-heading common-heading">Instagram</h2>
+            <div class="sidebar-contents">
+             <div class="instagram-box"></div>
+             <div class="instagram-box"></div>
+             <div class="instagram-box"></div>
+             <div class="instagram-box"></div>
+             <div class="instagram-box"></div>
+             <div class="instagram-box"></div>
 
           </div>
         </section>
 
         <section class="categories">
-          <h2 class="categories-heading common heading">Categories</h2>
+          <h2 class="categories-heading common-heading">Categories</h2>
 
-          <div class="sideber-contents">
+          <div class="sidebar-contents">
             <p class="categories-text">Technology(15)</p>
             <p class="categories-text">Business(23)</p>
             <p class="categories-text">Entertainment(12)</p>
@@ -178,9 +187,8 @@
         </section>
       </div>
     </main>
-
     <footer>
-      <p class="footer-text">©︎ All rights reserved by Infratop.Inc. </p>
+      <p class="footer-text">©︎ All rights reserved by Infratop.Inc</p>
     </footer>
 
   </body>
